macros/core/tests/snapshots/program__gprogram_generates_handle_for_multiple_services_with_empty_and_non_empty_routes.snap
---
source: macros/core/tests/program.rs
expression: result
---
impl MyProgram {
    #[groute("")]
    pub fn service1(&self) -> MyService {
        MyService
    }
    pub fn service2(&self) -> MyService {
        MyService
    }
}
impl sails_idl_meta::ProgramMeta for MyProgram {
    fn constructors() -> scale_info::MetaType {
        scale_info::MetaType::new::<meta::ConstructorsMeta>()
    }
    fn services() -> impl Iterator<
        Item = (&'static str, sails_idl_meta::AnyServiceMeta),
    > {
        [
            ("", sails_idl_meta::AnyServiceMeta::new::<MyService>()),
            ("Service2", sails_idl_meta::AnyServiceMeta::new::<MyService>()),
        ]
            .into_iter()
    }
}
use sails_rtl::prelude::Decode as __ProgramDecode;
use sails_rtl::prelude::TypeInfo as __ProgramTypeInfo;
mod meta {
    use super::*;
    #[derive(__ProgramTypeInfo)]
    pub enum ConstructorsMeta {}
}
#[cfg(target_arch = "wasm32")]
pub mod wasm {
    use super::*;
    use sails_rtl::{gstd, hex, prelude::*};
    static mut PROGRAM: Option<MyProgram> = None;
    #[no_mangle]
    extern "C" fn init() {
        let input = gstd::msg::load_bytes().expect("Failed to read input");
        if !input.is_empty() {
            {
                let input = String::decode(&mut input)
                    .unwrap_or_else(|_| {
                        if input.len() <= 8 {
                            format!("0x{}", hex::encode(input))
                        } else {
                            format!(
                                "0x{}..{}", hex::encode(& input[..4]), hex::encode(&
                                input[input.len() - 4..])
                            )
                        }
                    });
                panic!("Unexpected ctor: {}", input)
            }
        }
        unsafe {
            PROGRAM = Some(MyProgram::default());
        }
        gstd::msg::reply_bytes(input, 0).expect("Failed to send output");
    }
    #[gstd::async_main]
    async fn main() {
        let mut input: &[u8] = &gstd::msg::load_bytes().expect("Failed to read input");
        let output = if input
            .starts_with(&[32u8, 83u8, 101u8, 114u8, 118u8, 105u8, 99u8, 101u8, 50u8])
        {
            static INVOCATION_ROUTE: [u8; 9usize] = [
                32u8,
                83u8,
                101u8,
                114u8,
                118u8,
                105u8,
                99u8,
                101u8,
                50u8,
            ];
            let msg_scope = gstd::__create_message_scope(INVOCATION_ROUTE.as_ref());
            let program_ref = unsafe { PROGRAM.as_ref() }
                .expect("Program not initialized");
            let mut service = program_ref.service2();
            let output = service.handle(&input[9usize..]).await;
            [INVOCATION_ROUTE.as_ref(), &output].concat()
        } else {
            let program_ref = unsafe { PROGRAM.as_ref() }
                .expect("Program not initialized");
            let mut service = program_ref.service1();
            let output = service.handle(&input).await;
            output
        };
        gstd::msg::reply_bytes(output, 0).expect("Failed to send output");
    }
}

